--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "touch-ui",
+  "homepage": "https://ShaguftaAmreen.github.io/TouchUI",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "gh-pages": "^6.1.1",
+    "index.js": "^0.0.3",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.9.1",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
